--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 
 language: c
 compiler: gcc
+dist: trusty
+sudo: required
+
 
 # safelist
 branches:
@@ -16,6 +19,9 @@ addons:
 
 before_install:
  - echo 'Before Install Stage........'
+ - sudo dpkg --add-architecture i386
+ - sudo apt-get update
+ - sudo apt-get install libc6:i386 libncurses5:i386 libstdc++6:i386
 # - sudo apt-get -qq update
 # - sudo apt-get install -y libxml2-dev
 
@@ -24,19 +30,21 @@ before_install:
 install:
  - echo 'Install Stage........'
  - echo 'Install cross platform tool chain...'
- - sudo tar -xjf buildroot-gcc342.tar.bz2 -C /opt/
+ - sudo tar -jxvf buildroot-gcc342.tar.bz2 -C /opt/
+ - sudo ls -l /opt
 # - echo 'cache components...'
 
 
 before_script:
  - echo 'Before Script Stage........'
-# - bundle exec rake build
+ - ls -l /opt/buildroot-gcc342
+ - ls -l /opt/buildroot-gcc342/bin
 # - bundle exec rake build
 
 
 script:
  - echo 'Script Stage........'
-# - bundle exec rake build
+ - make
 # - bundle exec rake builddoc
 
 
